--- a/WpfDesignSuperDuper/WpfDesignSuperDuper.csproj
+++ b/WpfDesignSuperDuper/WpfDesignSuperDuper.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Core\" />
     <Folder Include="Fonts\" />
+    <Folder Include="Images\" />
+    <Folder Include="MVVM\Model\" />
+    <Folder Include="MVVM\View\" />
+    <Folder Include="MVVM\ViewModel\" />
   </ItemGroup>
 
 </Project>
